@@ -18,11 +18,10 @@
       <li>OpenOffice.org</li>
     </ul>
     <h3>More documentation</h3>
-    <p> Contributed documentation is welcome:
+    <p> Contributed documentation is welcome: </p>
     <ul class="left">
       <li>Documentation <a href="http://rd.cri74.org/index.php?2005/05/10/11-documentation-sur-sabayon">in French</a> by Philippe Tonguet.</li>
     </ul>
-    </p>
     <h2>
       <a name="helping">Helping with Sabayon</a>
     </h2>
