@@ -1,5 +1,11 @@
 2005-05-12  Mark McLoughlin  <markmc@redhat.com>
 
+	* doc/flat.html: fix invalid html.
+	
+	* doc/index.html: rebuild.
+
+2005-05-12  Mark McLoughlin  <markmc@redhat.com>
+
 	Add a dialog for associating users with profiles.
 
 	* admin-tool/Makefile.am: add usersdialog.py
